Fix T76630: Crash when changing transform value with Custom Orientation