source/blender/editors/transform/transform_orientations.c
@@ -500,8 +500,9 @@ void initTransformOrientation(bContext *C, TransInfo *t, short orientation)
       copy_m3_m3(t->spacemtx, t->orientation.custom_matrix);
       break;
     case V3D_ORIENT_CUSTOM:
+    default:
+      BLI_assert(orientation >= V3D_ORIENT_CUSTOM);
       BLI_strncpy(t->spacename, t->orientation.custom->name, sizeof(t->spacename));
-
       if (applyTransformOrientation(t->orientation.custom, t->spacemtx, t->spacename)) {
         /* pass */
       }
